<resources>
    <string name="app_name">KotlinAndroidDevelopment</string>
    <string name="calculate_your">Calculate Your</string>
    <string name="age">Age in</string>
    <string name="minutes">Minutes</string>
    <string name="calculate">Calculate</string>
    <string name="fab">FAB</string>
    <string name="select_date">Select Date</string>
    <string name="selected_date">Selected Date</string>
    <string name="in_minutes_till_date">In Minutes till date</string>

</resources>